# UQAC_ReseauTP1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/Socket/: Socket.h
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Client.cpp
src/Server/: CMakeLists.txt  Server.cpp
src/Socket/: CMakeLists.txt  Socket_common.cpp  Socket_posix.cpp  Socket_windows.cpp
